2007-11-23  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/speexresample/resample.c: (speex_resampler_get_latency),
	(speex_resampler_drain_float), (speex_resampler_drain_int),
	(speex_resampler_drain_interleaved_float),
	(speex_resampler_drain_interleaved_int):
	* gst/speexresample/speex_resampler.h:
	* gst/speexresample/speex_resampler_wrapper.h:
	Add functions to push the remaining samples and to get the latency
	of the resampler. These will get added to Speex SVN in this or a
	slightly changed form at some point too and should get merged then
	again.

	* gst/speexresample/gstspeexresample.c: (gst_speex_resample_init),
	(gst_speex_resample_init_state),
	(gst_speex_resample_transform_size),
	(gst_speex_resample_push_drain), (gst_speex_resample_event),
	(gst_speex_fix_output_buffer), (gst_speex_resample_process),
	(gst_speex_resample_query), (gst_speex_resample_query_type):
	Drop the prepending zeroes and output the remaining samples on EOS.
	Also properly implement the latency query for this. speexresample
	should be completely ready for production use now.

2007-11-22  Wim Taymans  <wim.taymans@gmail.com>

	* gst/rtpmanager/gstrtpjitterbuffer.c:
	(gst_rtp_jitter_buffer_query):
	jitterbuffer can buffer an unlimited amount of time and thus has no
	max_latency requirements.

2007-11-21  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/speexresample/README:
	Add README explaining where the resampling code was taken from
	and which changes were done.

	* gst/speexresample/resample.c: (speex_alloc), (speex_realloc),
	(speex_free):
	Use g_malloc() and friends instead of malloc() to achieve higher
	portability and define the functions inline.

	* gst/speexresample/speex_resampler.h:
	Add back some useless preprocessor stuff to keep the diff between
	our version and the one from the Speex SVN repository lower.

2007-11-21  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/filter/gstbpwsinc.c: (bpwsinc_set_property):